Few modifications